[update] assignment code